# spiking-nw-ssl

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  parameters.yaml  pyproject.toml  requirements.txt  run.sh  run_imaple.sh  setup.sh
.github/workflows/: style-checks.yml
tests/: conftest.py  test_inference_utils.py  test_params.py
underwater-ssl/: main.py  model_app.py  options.py  process_features.py  quicl.py
underwater-ssl/aca_dtnet/: inference.py  kalman.py  model.py  trainer.py
underwater-ssl/loss/: loss.py
underwater-ssl/sa_net/: inference.py  model.py  trainer.py
underwater-ssl/utils/: data_loader.py  feature_extraction.py  inspector.py  parameters.py  set_seed.py
